--- a/App/helper/language/languageProvider/locales/en_US.json
+++ b/App/helper/language/languageProvider/locales/en_US.json
@@ -1,4 +1,9 @@
 {
   "Home": "Home",
-  "Basic Calculator": "Basic Calculator"
+  "Language": "Language",
+  "Increment": "Increment",
+  "Decrement": "Decrement",
+  "Reset": "Reset",
+  "Basic Calculator": "Basic Calculator",
+  "Redux Calculator": "Redux Calculator"
 }
