--- a/App/helper/language/languageProvider/locales/id_ID.json
+++ b/App/helper/language/languageProvider/locales/id_ID.json
@@ -1,4 +1,9 @@
 {
   "Home": "Beranda",
-  "Basic Calculator": "Kalkulator Biasa"
+  "Language": "Bahasa",
+  "Increment": "Tambah",
+  "Decrement": "Kurang",
+  "Reset": "Reset",
+  "Basic Calculator": "Kalkulator Biasa",
+  "Redux Calculator": "Kalkulator Redux"
 }
