--- a/App/helper/language/languageProvider/locales/id_ID.json
+++ b/App/helper/language/languageProvider/locales/id_ID.json
@@ -7,6 +7,10 @@
   "Decrement": "Kurang",
   "Reset": "Reset",
   "Theme": "Tema",
+  "Dark": "Gelap",
+  "Light": "Terang",
+  "dark": "Gelap",
+  "light": "Terang",
   "Basic Calculator": "Kalkulator Biasa",
   "Redux Calculator": "Kalkulator Redux"
 }
