saga + infinite list

--- a/App/helper/language/languageProvider/locales/en_US.json
+++ b/App/helper/language/languageProvider/locales/en_US.json
@@ -12,5 +12,6 @@
   "dark": "Dark",
   "light": "Light",
   "Basic Calculator": "Basic Calculator",
-  "Redux Calculator": "Redux Calculator"
+  "Redux Calculator": "Redux Calculator",
+  "Post": "Post"
 }
