--- a/App/helper/language/languageProvider/locales/id_ID.json
+++ b/App/helper/language/languageProvider/locales/id_ID.json
@@ -12,5 +12,6 @@
   "dark": "Gelap",
   "light": "Terang",
   "Basic Calculator": "Kalkulator Biasa",
-  "Redux Calculator": "Kalkulator Redux"
+  "Redux Calculator": "Kalkulator Redux",
+  "Post": "Postingan"
 }
