Detail Post + Toast jika Tak ada konesi ..... uwu

--- a/App/helper/language/languageProvider/locales/en_US.json
+++ b/App/helper/language/languageProvider/locales/en_US.json
@@ -13,5 +13,7 @@
   "light": "Light",
   "Basic Calculator": "Basic Calculator",
   "Redux Calculator": "Redux Calculator",
-  "Post": "Post"
+  "Post": "Post",
+  "Post Detail": "Post Detail",
+  "No Internet Connection": "No Internet Connection!"
 }
