--- a/App/helper/language/languageProvider/locales/id_ID.json
+++ b/App/helper/language/languageProvider/locales/id_ID.json
@@ -13,5 +13,7 @@
   "light": "Terang",
   "Basic Calculator": "Kalkulator Biasa",
   "Redux Calculator": "Kalkulator Redux",
-  "Post": "Postingan"
+  "Post": "Postingan",
+  "Post Detail": "Rincian Postingan",
+  "No Internet Connection": "Tidak Ada Koneksi Internet !"
 }
